--- a/TestClient/TestClient/MainWindow.xaml
+++ b/TestClient/TestClient/MainWindow.xaml
@@ -10,7 +10,7 @@
         <DatePicker HorizontalAlignment="Left" Margin="129,10,0,0" VerticalAlignment="Top"/>
         <Label Name="Lbl_From" Content="From" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
         <ListBox HorizontalAlignment="Left" Height="295" Margin="291,10,0,0" VerticalAlignment="Top" Width="216"/>
-        <Button Name="StartService" Content="Start" HorizontalAlignment="Left" Margin="10,99,0,0" VerticalAlignment="Top" Width="112" Height="30" IsEnabled="False"/>
+        <Button Name="StartService" Content="Start" HorizontalAlignment="Left" Margin="10,99,0,0" VerticalAlignment="Top" Width="112" Height="30" IsEnabled="False" Click="StartService_Click"/>
         <ComboBox HorizontalAlignment="Left" Margin="111,41,0,0" VerticalAlignment="Top" Width="120"/>
         <Label Content="Alarm Type" HorizontalAlignment="Left" Margin="10,37,0,0" VerticalAlignment="Top"/>
         <TextBox HorizontalAlignment="Left" Height="23" Margin="111,71,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" />
